# rust-igmc-2018

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml
assets/data/: flavors.ron  hissatsu.ron  houses.ron  palette.ron  players.ron  preparations.ron  teams.ron  toppings.ron
assets/i18n/: en_us.ron
assets/map/: 0000.ron  0001.ron  0002.ron  0003.ron  freeplay.ron
assets/texture/: character_base.ron  items.ron  map_tiles.ron
assets/texture/flavor/: index.ron
assets/texture/item/: flavors.ron  index.ron  old-index.ron  toppings.ron
assets/texture/other/: menu.ron
assets/texture/player/: index.ron
assets/texture/preparation/: index.ron
assets/texture/topping/: index.ron
assets/texture/ui/: buttons.ron  loadout_selection.ron  map_selection.ron  timers.ron
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
resources/: display.ron  input.ron
src/: constants.rs  ecs.rs  loader.rs  main.rs  util.rs
src/data/: Cargo.toml  flavor.rs  mod.rs
src/data/src/: animation.rs  common.rs  constants.rs  effect.rs  flavor.rs  gameplay.rs  hissatsu.rs  house.rs  lib.rs  map.rs  order.rs  player.rs  preparation.rs  sound.rs  sprite_folder.rs  team.rs  topping.rs  ui.rs
src/ecs/: Cargo.toml  component.rs  system.rs
src/ecs/component/: background.rs  direction.rs  hitbox.rs  input.rs  interaction.rs  pixel_perfect.rs  player.rs  solid.rs  velocity.rs
src/ecs/src/: component.rs  controller.rs  lib.rs  system.rs
src/ecs/src/component/: animation.rs  direction.rs  effect.rs  input.rs  interact.rs  interaction.rs  inventory_item.rs  layered.rs  player.rs  score.rs  table.rs  ui.rs
src/ecs/src/system/: animation.rs  autotile.rs  background_animation.rs  collision.rs  control.rs  direction.rs  flavor_interaction.rs  generate.rs  input.rs  interact.rs  interaction.rs  inventory_render.rs  layer.rs  melt.rs  movement.rs  orders.rs  score.rs  timer.rs
src/ecs/system/: background_animation.rs  collision.rs  control.rs  direction.rs  input.rs  interact.rs  layer.rs  movement.rs
src/loader/: Cargo.toml  map.rs  players.rs  ui.rs
src/loader/src/: audio.rs  buttons.rs  data.rs  fonts.rs  item.rs  lib.rs  map.rs  player.rs  ui.rs
src/state/: Cargo.toml  game.rs  mod.rs
src/state/src/: bundle.rs  freeplay.rs  game.rs  lib.rs  load.rs
src/util/: Cargo.toml  float_range.rs  map.rs  texture.rs
src/util/src/: bg.rs  lib.rs  map.rs  ui.rs
