[package]
name = "rust-igmc-2018"
version = "0.1.0"
authors = ["Tiago Nascimento <tiago@theosirian.com>"]
edition = "2018"
license = "AGPLv3"

[features]
nightly = ["amethyst/nightly"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git" }
serde = "1.0"
serde_derive = "1.0"
ron = "0.4"
log = "0.4"
rand = "0.5"
ndarray = { version = "0.11", features = ["blas"] }
blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6", default-features = false, features = ["cblas", "system"] }
font-kit = "0.1"
gilrs = "0.6"
nalgebra = "0.16"
ncollide2d = "0.17"
itertools = "0.7"
either = "1.5"
