[package]
name = "rust-igmc-2018"
description = "Game made for IGMC 2018 by MGDA"
version = "0.3.0"
authors = ["Tiago Nascimento <tiago@theosirian.com>"]
edition = "2018"

homepage = "https://gamedev.maringa.br/igmc-2018"
documentation = "https://gamedev.maringa.br/igmc-2018/docs"
repository = "https://github.com/maringa-gamedev/rust-igmc-2018"

readme = "README.md"
license = "AGPLv3"

[features]
nightly = ["amethyst/nightly"]

[dependencies]
nk_ecs = { path = "src/ecs/", version = "0.1.0" }
nk_data = { path = "src/data/", version = "0.1.0" }
nk_loader = { path = "src/loader/", version = "0.1.0" }
nk_state = { path = "src/state/", version = "0.1.0" }
nk_util = { path = "src/util/", version = "0.1.0" }
amethyst = { git = "https://github.com/amethyst/amethyst.git" }
serde = "1.0"
serde_derive = "1.0"
ron = "0.4"
log = "0.4"
rand = "0.5"
font-kit = "0.1"
gilrs = "0.6"
nalgebra = "0.16"
ncollide2d = "0.17"
itertools = "0.7"
either = "1.5"
clap = "~2.32"
image = "0.20"

[[bin]]
name = "nk_game"
path = "src/bin/game.rs"

[[bin]]
name = "nk_tool"
path = "src/bin/tool.rs"

[workspace]
members = ["src/ecs/", "src/data/", "src/loader/", "src/state/", "src/util/"]
